FilePicker: remove fixed min-width from file list
Removes the min-width: 25rem rule from .b-file-picker-file so the file
list matches the picker width instead of overflowing its container.

--- a/Source/Blazorise/Styles/_file.scss
+++ b/Source/Blazorise/Styles/_file.scss
@@ -13,8 +13,6 @@
     }
 
     .b-file-picker-file {
-        min-width: 25rem;
-
         span {
             display: block;
         }
